--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,14 @@
   <head>
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-<!--     <script src="https://maps.googleapis.com/maps/api/js"></script> -->
   </head>
   <body>
     <div class="container"></div>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+    integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/bundle.js"></script>
 </html>
